--- a/cutlass/cusync-cutlass/examples/volta_transformer/Makefile
+++ b/cutlass/cusync-cutlass/examples/volta_transformer/Makefile
@@ -1,7 +1,9 @@
-CUTLASS=../../
-CUSYNC=../../../cusync/src/include/
 NVCC=/usr/local/cuda-12.2/bin/nvcc
-INCLUDES=-I$(CUTLASS)/include -I$(CUTLASS)/examples/common -I$(CUTLASS)/tools/util/include -I$(CUSYNC)
+ROOT=../../../../
+CUSYNC=$(ROOT)/src/include
+NV_CUTLASS=$(ROOT)/cutlass/nvidia-cutlass
+CUSYNC_CUTLASS=$(ROOT)/cutlass/cusync-cutlass
+INCLUDES=-I$(NV_CUTLASS)/include -I$(NV_CUTLASS)/examples/common -I$(NV_CUTLASS)/tools/util/include -I$(CUSYNC_CUTLASS)/include/ -I$(CUSYNC)
 DEFINES=-DCUTLASS_ENABLE_CUBLAS=1 -DCUTLASS_NAMESPACE=cutlass -DCUTLASS_ENABLE_TENSOR_CORE_MMA=1 -DCUTLASS_TEST_LEVEL=0 -DCUTLASS_TEST_ENABLE_CACHED_RESULTS=1 -DCUTLASS_CONV_UNIT_TEST_RIGOROUS_SIZE_ENABLED=1 -DCUTLASS_DEBUG_TRACE_LEVEL=0
 
 all: mlp-rowsync mlp-tilesync
@@ -18,8 +20,8 @@ mlp-batchedrow: mlp.cu common.h
 mlp-tilebatchsync: mlp.cu common.h
 	$(NVCC)  $(DEFINES) $(INCLUDES)  -Xcompiler=-Wconversion -Xcompiler=-fno-strict-aliasing -gencode=arch=compute_70,code=[sm_70,compute_70] -std=c++17 -x cu -DNDEBUG ./mlp.cu -o $@ -Xptxas -v -lcublas -Xcompiler=-fopenmp -O3 -DTILEBATCH
 
-mlp-rowsync: mlp.cu common.h
-	$(NVCC)  $(DEFINES) $(INCLUDES)  -Xcompiler=-Wconversion -Xcompiler=-fno-strict-aliasing -gencode=arch=compute_70,code=[sm_70,compute_70] -std=c++17 -x cu -DNDEBUG ./mlp.cu -o $@ -Xptxas -v -lcublas -Xcompiler=-fopenmp -O3 -DROWSYNC
+mlp-gpt3-rowsync: mlp.cu common.h
+	$(NVCC)  $(DEFINES) $(INCLUDES)  -Xcompiler=-Wconversion -Xcompiler=-fno-strict-aliasing -gencode=arch=compute_70,code=[sm_70,compute_70] -std=c++17 -x cu -DNDEBUG ./mlp.cu -o $@ -Xptxas -v -lcublas -Xcompiler=-fopenmp -O3 -DROWSYNC -DMLP_GPT3
 
 libmlp.so: mlp-lib.cu common.h
 	$(NVCC)  $(DEFINES) $(INCLUDES) --shared -Xcompiler -m64,-fPIC,-Wconversion,-fno-strict-aliasing -gencode=arch=compute_70,code=[sm_70,compute_70] -std=c++17 -x cu -DNDEBUG ./mlp-lib.cu -o $@ -Xptxas -v -lcublas -Xcompiler=-fopenmp -O3 -DROWSYNC
