--- a/ml-bench/volta_transformer/Makefile
+++ b/ml-bench/volta_transformer/Makefile
@@ -1,5 +1,5 @@
 NVCC=/usr/local/cuda-12.2/bin/nvcc -std=c++17
-ROOT=../../../../
+ROOT=../../
 CUSYNC=$(ROOT)/src/include
 NV_CUTLASS=$(ROOT)/cutlass/nvidia-cutlass
 CUSYNC_CUTLASS=$(ROOT)/cutlass/cusync-cutlass
