--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "cutlass/nvidia-cutlass"]
 	path = cutlass/nvidia-cutlass
 	url = https://github.com/NVIDIA/cutlass.git
+[submodule "googletest"]
+	path = tests/googletest
+	url = https://github.com/google/googletest.git
